[project]
name = "optimization"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Elsner", email = "jeelsner@outlook.com"},
]
dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.15.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "coverage>=7.9.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
